# alibaba_crawlerplus

./: .gitignore  README.md  alibaba.py  clean.py  crawler-config.toml  crawler-config.yaml  debugger.py  inspector.py  main.py  pyproject.toml  requirements.txt  sheetwriter.py  writer.py
alibaba_crawlerplus/: loadconf.py
alibaba_crawlerplus/legacy/: example.py  pipelines.py
cache/: catalogs.pickle  details.pickle  offers.pickle
data/: sample-captcha.html  sample-detail-urls.txt  sample-nooffers.html  sample.html  sample.json
inspect/: details.txt  offers.txt
raw-samples/: sample-detail.html  sample-nooffers.json
sheets/: 宿迁市.xlsx
src/: addressing.py  conf.py  configuration.py  datamodels.py  exceptions.py  locators.py  middlewares.py  models.py  parsers.py  requesthub.py  requesthubs.py  settings.py  typedefs.py  urlproducer.py  urls.py  util.py
src/datamodels/: __init__.py  address.py  addressing.py  alibaba.py
src/interactive/: __init__.py  abstract.py  alibaba.py
src/items/: __init__.py  catalog.py  detail.py
src/legacy/: alibaba.py  process_data.py
src/middlewares/: __init__.py  interactive.py  useragent.py
src/misc/: __init__.py  addressing.py  resuming.py
src/parsers/: __init__.py  abstract.py  alibaba.py  compose.py
src/pipelines/: __init__.py  catalog.py  detail.py
src/requesthubs/: __init__.py  abstract.py  default.py  sleepy.py
src/spiders/: catalog.py  detail.py
src/urls/: __init__.py  abstract.py  alibaba.py
src/util/: __init__.py  area.py  url.py
