[tool.poetry]
package-mode = false
name = "alibaba-crawlerplus"
version = "0.3.2"
description = "Crawler project inherited from postgraduate seniors."
authors = ["Cylix Lee <cylix.lee@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
