[tool.poetry]
package-mode = false
name = "alibaba-crawlerplus"
version = "1.2.0"
description = "Crawler project inherited from postgraduate seniors."
authors = ["Cylix Lee <cylix.lee@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pyyaml = "^6.0.2"
tqdm = "^4.66.5"
selenium = "^4.24.0"
typing-extensions = "^4.12.2"
pandas = {extras = ["excel"], version = "^2.2.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
