[tool.poetry]
package-mode = false
name = "alibaba-crawlerplus-v2"
version = "2.0.2"
description = "Alibaba crawler with brand new architecture."
authors = ["Cylix Lee <cylix.lee@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
fake-useragent = "^1.5.1"
toml = "^0.10.2"
typing-extensions = "^4.12.2"
selenium = "^4.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
